--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/bootstrap.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <title>Bootstrap Theme</title>
+  <title>Mizuxe</title>
 </head>
 
 <body id="home" data-spy="scroll" data-target="#main-nav">
@@ -428,7 +428,7 @@
     $("#main-nav a").on('click', function (event) {
       if (this.hash !== "") {
         event.preventDefault();
-
+        console.log(this.hash);
         const hash = this.hash;
 
         $('html, body').animate({
